--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simplnote",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://WoodwindCDT.github.io",
+  "homepage": "https://woodwindcdt.github.io/simplenote/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
